# orthanc-transfers

./: AUTHORS  CMakeLists.txt  NEWS  README  TODO
Framework/: DicomInstanceInfo.cpp  DicomInstanceInfo.h  DownloadArea.cpp  DownloadArea.h  OrthancInstancesCache.cpp  OrthancInstancesCache.h  SourceDicomInstance.cpp  SourceDicomInstance.h  StatefulOrthancJob.cpp  StatefulOrthancJob.h  TransferBucket.cpp  TransferBucket.h  TransferQuery.cpp  TransferQuery.h  TransferScheduler.cpp  TransferScheduler.h  TransferToolbox.cpp  TransferToolbox.h
Framework/HttpQueries/: DetectTransferPlugin.cpp  DetectTransferPlugin.h  HttpQueriesQueue.cpp  HttpQueriesQueue.h  HttpQueriesRunner.cpp  HttpQueriesRunner.h  IHttpQuery.h
Framework/PullMode/: BucketPullQuery.cpp  BucketPullQuery.h  PullJob.cpp  PullJob.h
Framework/PushMode/: ActivePushTransactions.cpp  ActivePushTransactions.h  BucketPushQuery.cpp  BucketPushQuery.h  PushJob.cpp  PushJob.h
Plugin/: Plugin.cpp  PluginContext.cpp  PluginContext.h
Resources/: OrthancExplorer.js  SyncOrthancFolder.py
Resources/Orthanc/CMake/: DownloadOrthancFramework.cmake
Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp  OrthancPluginCppWrapper.h
Resources/Orthanc/Sdk-1.11.3/orthanc/: OrthancCPlugin.h
Resources/Patches/: orthanc-1.5.6.patch
UnitTests/: UnitTestsMain.cpp
